Fix collapse padding jolt

--- a/nextjs-app/styles/style.css
+++ b/nextjs-app/styles/style.css
@@ -14,7 +14,7 @@ aside {
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
-  padding: 1rem;
+  /* padding: 1rem; */
   position: sticky;
   top: 0;
   left: 0;
@@ -38,11 +38,6 @@ aside.collapsed {
 #sidebar-header {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;
-}
-
-#sidebar-header * {
-  margin: 0.5rem;
 }
 
 #name-text {
@@ -53,17 +48,19 @@ aside.collapsed {
   font-weight: bold;
   text-shadow: 2px 2px 0px #08853e;
   flex-shrink: 0;
+  margin: 1rem;
 }
 
 #collapse-sidebar {
   color: white;
   cursor: pointer;
+  margin: 0.5rem;
 }
 
 #expand-sidebar {
   transform: rotate(180deg);
   position: fixed;
-  top: 2.5rem;
+  top: 2rem;
   left: 1.5rem;
   z-index: 1000;
   cursor: pointer;
@@ -90,6 +87,8 @@ aside.collapsed {
 
 #sidebar a {
   white-space: nowrap;
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 #sidebar a.observed {
